[gd_scene load_steps=14 format=2]

[ext_resource path="res://COOPBL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/tank/PlayerGun.png" type="Texture" id=3]
[ext_resource path="res://assets/tank/PlayerHull.png" type="Texture" id=4]
[ext_resource path="res://assets/tank/MediumPickup.png" type="Texture" id=5]
[ext_resource path="res://assets/tank/HealthPickup.png" type="Texture" id=6]
[ext_resource path="res://assets/tank/EnemyGun.png" type="Texture" id=7]
[ext_resource path="res://assets/tank/EnemyHull.png" type="Texture" id=8]
[ext_resource path="res://assets/obstacles/Gate.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/menu.ogg" type="AudioStream" id=10]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 11 )

[node name="MainMenu" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.403922, 0.647059, 1, 1 )
margin_top = 1.0
margin_right = 1279.0
margin_bottom = 721.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 108.0
margin_top = 123.0
margin_right = 536.0
margin_bottom = 539.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 108.0
margin_top = 111.0
margin_right = 539.0
margin_bottom = 304.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]
TANK BULLET
HELL
[/center]"
text = "
TANK BULLET
HELL
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 155.0
margin_top = 315.0
margin_right = 305.0
margin_bottom = 365.0
text = "PLAY"

[node name="About" type="Button" parent="."]
margin_left = 336.0
margin_top = 315.0
margin_right = 486.0
margin_bottom = 365.0
text = "HOW TO PLAY"

[node name="Close" type="Button" parent="."]
margin_left = 336.0
margin_top = 400.0
margin_right = 486.0
margin_bottom = 450.0
text = "QUIT"

[node name="Tutorial" type="Panel" parent="."]
visible = false
margin_left = 631.0
margin_top = 123.0
margin_right = 1124.0
margin_bottom = 539.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial"]
margin_left = 95.0
margin_top = 41.0
margin_right = 352.0
margin_bottom = 63.0
text = "Health pickup - restores health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Tutorial"]
margin_left = 91.0
margin_top = 119.0
margin_right = 474.0
margin_bottom = 161.0
text = "Weapon pickup - gives a different gun, there are 4 in total"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Tutorial"]
margin_left = 101.75
margin_top = 188.75
margin_right = 484.75
margin_bottom = 230.75
text = "Enemy tank - kill all enemies and get to exit to win"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="Tutorial"]
margin_left = 29.0
margin_top = 285.0
margin_right = 412.0
margin_bottom = 387.0
text = "Use WASD or arrows to move
Use Mouse to aim, left click to shoot
Use scroll wheel to change weapons
Press E to open gates
Press M to show the map
	-shows locations of all remaining enemies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="Tutorial"]
margin_left = 136.0
margin_top = 241.0
margin_right = 455.0
margin_bottom = 283.0
text = "A gate - every gate needs a certain amount of points to open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Tutorial"]
position = Vector2( 51, 49 )
texture = ExtResource( 6 )

[node name="MediumPickup" type="Sprite" parent="Tutorial"]
position = Vector2( 52, 125 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="EnemyHull" type="Sprite" parent="Tutorial"]
position = Vector2( 57.75, 193.75 )
scale = Vector2( 0.271484, 0.271484 )
texture = ExtResource( 8 )

[node name="EnemyGun" type="Sprite" parent="Tutorial/EnemyHull"]
position = Vector2( 18, 0 )
texture = ExtResource( 7 )

[node name="Gate" type="Sprite" parent="Tutorial"]
position = Vector2( 76.0001, 257 )
scale = Vector2( 0.40625, 0.40625 )
texture = ExtResource( 9 )

[node name="Tank" type="Sprite" parent="."]
position = Vector2( 1112, 574 )
rotation = -2.7129
z_index = 1
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Tank"]
position = Vector2( 18.368, 1.62051 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -35.0

[node name="Settings" type="Panel" parent="."]
visible = false
margin_left = 649.0
margin_top = 226.0
margin_right = 975.0
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeControl" type="HSlider" parent="Settings"]
margin_left = 125.0
margin_top = 55.0
margin_right = 300.0
margin_bottom = 130.0
min_value = -80.0
max_value = 24.0
value = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Settings"]
margin_left = 16.0
margin_top = 74.0
margin_right = 114.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 2 )
text = "Volume:"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 155.0
margin_top = 400.0
margin_right = 305.0
margin_bottom = 450.0
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="value_changed" from="Settings/VolumeControl" to="." method="_on_VolumeControl_value_changed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
